--- a/TechJobsPersistent/appsettings.json
+++ b/TechJobsPersistent/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=127.0.0.1;uid=root;pwd=Sigmund2020!;database=techjobs"
+  }
 }
